# ar2pi

./: .editorconfig  .gitignore  .gitmodules  Makefile  PUBLISH.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: bash-scripting.md  bash.md  git.md  go.md  index.md  kubernetes.md  linux-debian.md  linux.md  network.md  networking.md  poems.md  prometheus-video-renderer.md  python.md  shell.md  vim.md
docs/labs/: prometheus-video-renderer.md
hooks/: post-merge  pre-push
hooks/utils/: all.sh  exit.sh
scripts/: run-deploy.sh
