[project]
name = "ar2pi"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Picerna",email = "hello@ar2pi.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
